# TFG

./: README.md  TODO.md  pyproject.toml  setup_raspberry_pi.sh
docs/: CLIENT_SERVER_SETUP.md  ULTRASONIC_INTEGRATION.md
scripts/: demo.py
src/doro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/doro/agent/: __init__.py  q_learning_agent.py
src/doro/client/: robot_client.py
src/doro/environment/: base.py  real.py  simulated.py
src/doro/server/: __init__.py  robot_server.py
src/doro/utils/: __init__.py  train_agent.py
tests/: test_integration.py  test_websocket_communication.py
