[project]
name = "doro"
version = "0.1.0"
description = "Q-Learning Agent for Anomaly Detection and Investigation in Robotics"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["machine-learning", "robotics", "q-learning", "anomaly-detection", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "websockets>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[tool.uv]
package = true